--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,12 +4,19 @@
   "main": "src/server.ts",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --ignore-watch node_modules --no-notify src/shared/infra/server.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --ignore-watch node_modules --no-notify src/shared/infra/http/server.ts",
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "bcryptjs": "^2.4.3",
+    "celebrate": "^12.1.2",
+    "date-fns": "^2.14.0",
+    "express": "^4.17.1",
+    "pg": "^8.3.0",
+    "tsyringe": "^4.3.0",
+    "typeorm": "^0.2.25",
+    "uuidv4": "^6.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.3",
