--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --ignore-watch node_modules --no-notify src/shared/infra/http/server.ts",
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
-    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "test": "jest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "celebrate": "^12.1.2",
     "date-fns": "^2.14.0",
     "express": "^4.17.1",
+    "jest": "^26.1.0",
     "pg": "^8.3.0",
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.25",
@@ -25,6 +27,7 @@
     "@babel/preset-env": "^7.10.3",
     "@babel/preset-typescript": "^7.10.1",
     "@types/express": "^4.17.7",
+    "@types/jest": "^26.0.4",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
     "babel-plugin-module-resolver": "^4.0.0",
@@ -34,6 +37,7 @@
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "ts-jest": "^26.1.2",
     "ts-node-dev": "^1.0.0-pre.52",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.9.6"
