--- a/back-end/tsconfig.json
+++ b/back-end/tsconfig.json
@@ -1,19 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es2017",
     "module": "commonjs",
-    "lib": [
-      "es6"
-    ],
-    "typeRoots": [
-      "./node_modules/@types",
-      "./src/@types"
-    ],
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
-    "removeComments": true,
     "strictPropertyInitialization": false,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
     "baseUrl": ".",
     "allowJs": true,
     "paths": {
@@ -28,13 +21,11 @@
       ]
     },
     "esModuleInterop": true,
-    "resolveJsonModule": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": [
-    "src/**/*",
+    "src/**/*"
   ]
 }
