--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "celebrate": "^12.1.2",
+    "class-transformer": "^0.2.3",
+    "cors": "^2.8.5",
     "date-fns": "^2.14.0",
     "express": "^4.17.1",
     "jest": "^26.1.0",
@@ -26,6 +28,7 @@
     "@babel/node": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
     "@babel/preset-typescript": "^7.10.1",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.4",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
