--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,13 +1,18 @@
 {
   "name": "back-end",
+  "jest": {
+    "setupFiles": [
+      "dotenv/config"
+    ]
+  },
   "version": "1.0.0",
-  "main": "src/server.ts",
+  "main": "index.js",
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --ignore-watch node_modules --no-notify src/shared/infra/http/server.ts",
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "test": "jest"
+    "test": "jest --setupFiles dotenv/config"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -15,7 +20,9 @@
     "class-transformer": "^0.2.3",
     "cors": "^2.8.5",
     "date-fns": "^2.14.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "jest": "^26.1.0",
     "pg": "^8.3.0",
     "tsyringe": "^4.3.0",
