--- a/back-end/package.json
+++ b/back-end/package.json
@@ -35,6 +35,7 @@
     "@babel/node": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
     "@babel/preset-typescript": "^7.10.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.4",
