implements the function of authenticate user

--- a/back-end/.env.example
+++ b/back-end/.env.example
@@ -1,2 +1,8 @@
-#Configuração do Dominio de E-mail pretendido
+#DOMAIN CONFIGURATION
 EMAIL_DOMAIN=
+
+
+#JWT CONFIGURATION
+APP_SECRET=
+APP_EXPIRE=1d
+
