--- a/back-end/package.json
+++ b/back-end/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jest": "^26.1.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.3.0",
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.25",
@@ -39,6 +40,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.4",
+    "@types/jsonwebtoken": "^8.5.0",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
     "babel-plugin-module-resolver": "^4.0.0",
